<resources>
    <string name="app_name" translatable="false">Kaku</string>
    <string name="action_settings">Settings</string>

    <!-- labels -->
    <string name="home_label">Home</string>
    <string name="list_label">Kanji list</string>
    <string name="label_writing">Writing</string>
    <string name="hiragana_label" translatable="false">Hiragana</string>
    <string name="drawing_label">Drawing Practice</string>

    <!-- Home -->
    <string name="welcome">Welcome to\nKaku</string>
    <string name="welcome_info_1">Kaku is a tool to practice kanji in real sentences.</string>
    <string name="welcome_info_2">You will be given a sentence with kanji and you\'ll write it in hiragana.</string>
    <string name="welcome_info_3">To get started, swipe right to view the menu and click on \"Kanji list\" to create a list of kanji you know.</string>

    <!-- Kanji list -->
    <string name="save">Save</string>
    <string name="wk_api_key">Your WaniKani API key</string>
    <string name="btn_import">Import</string>
    <string name="import_wk_label">Import from WaniKani</string>
    <string name="importing_message">Importing from WaniKani\nKeep in mind that the API has a ratelimit 60 requests per minute.</string>
    <string name="kanjilist_toast">You do not have any kanji in your kanji list.</string>
    <!-- Kanji Writing Start -->
    <string name="start_writing">Start writing!</string>
    <string name="start">Start</string>
    <string name="wrs_kanjicount">You currently have %s kanji in your list. To change your kanji, swipe right and click on "Kanji list".</string>
    <string name="placeholder">Loading</string>
    <string name="msg_filtering">Filtering sentences from %s sentences.</string>
    <string name="msg_loading_sentences">Loading sentences…</string>
    <string name="missing_list_title">Missing Kanji List</string>
    <string name="missing_list_message">You need to create a kanji list. Press Ok to move to the kanji list creation screen.</string>

    <!-- Kanji Writing -->
    <string name="submit">Submit</string>
    <string name="input_japanese_msg">Type your japanese here</string>
    <string name="correct"><![CDATA[<p><font color=\'#32f039\'>Correct!</font></p> ]]></string>
    <string name="english_meaning">English meaning:\n%s</string>
    <string name="wrong"><![CDATA[<p><font color=\'#eb4034\'>Wrong!</font><br>%s</p> ]]></string>
    <string name="next">Next</string>
    <plurals name="points">
        <item quantity="zero">You got %d points out of %d</item>
        <item quantity="one">You got %d point out of %d</item>
        <item quantity="two">You got %d points out of %d</item>
        <item quantity="few">You got %d points out of %d</item>
        <item quantity="many">You got %d points out of %d</item>
        <item quantity="other">You got %d points out of %d</item>
    </plurals>
    <string name="out_of_sentences">No more sentences available</string>
    <string name="no_more">There are no more sentences left, great job! Press Ok to move back to kanji list.</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="punct_summary_off">Kaku WILL NOT check if you ended the sentence with 。？ or ！</string>
    <string name="punct_summary_on">Kaku WILL check if you ended the sentence with 。？ or ！ (depending on the sentence)</string>
    <string name="punct_title">Check for 。？ and ！</string>
    <string name="count_title">Count points</string>
    <string name="hiraganaedit_title">Use HiraganaEditText</string>
    <string name="hiraganaedit_summary">If you don\'t want to use a keyboard with hiragana</string>
    <string name="setting_theme">Set color theme manually?</string>
    <string name="setting_choosetheme">Choose a theme</string>
    <string name="dark">Dark theme</string>
    <string name="light">Light theme</string>
    <string name="settings_kanji_test">Kanji Test Settings</string>
    <string name="settings_appearance">Appearance</string>

    <!-- about -->
    <string name="about">About</string>
    <string name="runs_thanks">Kaku runs thanks to these\n projects:</string>
    <string name="licenses">– Material Icons used under Apache 2.0 License\n– JP–EN sentences from Tatoeba.org\nused under CC BY 2.0 license\n- HiraganaEditText by jehutyno\nused under Apache 2.0 license\n- Kuromoji morphological analyzer\n used under the Apache 2.0 license\n- Kanji stroke order font Copyright\n © 2004-2020 Ulrich Apel,\n the AAAA project and the Wadoku project\n All rights reserved.</string>
    <string name="btn_repo">GitHub Repo</string>
    <string name="all_licenses">All Licenses</string>


    <!-- Hiragana writing -->
    <string name="select_hiragana">Select hiragana to practice</string>
    <string name="type_the_romaji">Type in the rōmaji</string>
    <string name="left">%d more left</string>
    <string name="a_row" translatable="false">あいうえお</string>
    <string name="t_row" translatable="false">たちつてと</string>
    <string name="m_row" translatable="false">まみむめも</string>
    <string name="w_row" translatable="false">わを</string>
    <string name="d_row" translatable="false">だぢづでど</string>
    <string name="k_row" translatable="false">かきくけこ</string>
    <string name="s_row" translatable="false">さしすせそ</string>
    <string name="n_row" translatable="false">なにぬねの</string>
    <string name="h_row" translatable="false">はひふへほ</string>
    <string name="y_row" translatable="false">やゆよ</string>
    <string name="r_row" translatable="false">らりるれろ</string>
    <string name="g_row" translatable="false">がぎぐげご</string>
    <string name="z_row" translatable="false">ざじずぜぞ</string>
    <string name="b_row" translatable="false">ばびぶべぼ</string>
    <string name="p_row" translatable="false">ぱぴぷぺぽ</string>
    <string name="n" translatable="false">ん</string>
    <string name="end">Looks like that\'s it</string>
    <string name="ok_return">Press Ok to return to the choosing screen.</string>

    <!-- Drawing Fragment -->
    <string name="erase">Erase</string>
    <string name="missing_list_message_alt">You need to create a kanji list. Press Ok to go back.</string>

</resources>