<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="?attr/icon_home"
            android:title="@string/home_label" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="?attr/icon_list"
            android:title="@string/list_label" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="?attr/icon_quiz"
            android:title="@string/label_writing"/>
        <item
            android:id="@+id/nav_hiragana_start"
            android:icon="?attr/icon_hiragana"
            android:title="@string/hiragana_label"/>
    </group>
</menu>