<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constLayout_h"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:columnCount="3">

    <CheckBox
        android:id="@+id/check_a_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/blueDark"
        android:gravity="center"
        android:text="@string/a_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_k_row"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_t_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/t_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_n_row"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_m_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/m_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_y_row"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_w_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/w_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_g_row"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_d_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/d_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_b_row"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_k_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:buttonTint="@color/blueDark"
        android:gravity="center"
        android:text="@string/k_row"
        app:layout_constraintEnd_toStartOf="@+id/check_s_row"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toEndOf="@+id/check_a_row"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/check_s_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/blueDark"
        android:gravity="center"
        android:text="@string/s_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_k_row"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/check_n_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/n_row"
        app:layout_constraintEnd_toStartOf="@+id/check_h_row"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/check_t_row"
        app:layout_constraintTop_toBottomOf="@+id/check_k_row" />

    <CheckBox
        android:id="@+id/check_h_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/h_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_n_row"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/select_hiragana"
        android:textAppearance="@style/Paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/check_y_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/y_row"
        app:layout_constraintEnd_toStartOf="@+id/check_r_row"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toEndOf="@+id/check_m_row"
        app:layout_constraintTop_toBottomOf="@+id/check_n_row" />

    <CheckBox
        android:id="@+id/check_r_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/r_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_y_row"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/check_g_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/g_row"
        app:layout_constraintEnd_toStartOf="@+id/check_z_row"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/check_w_row"
        app:layout_constraintTop_toBottomOf="@+id/check_y_row" />

    <CheckBox
        android:id="@+id/check_z_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/z_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_g_row"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/check_b_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/b_row"
        app:layout_constraintEnd_toStartOf="@+id/check_p_row"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/check_d_row"
        app:layout_constraintTop_toBottomOf="@+id/check_g_row" />

    <CheckBox
        android:id="@+id/check_p_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/blueDark"
        android:text="@string/p_row"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_b_row"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/check_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/blueDark"
        android:text="@string/n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_b_row" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_n" />
</androidx.constraintlayout.widget.ConstraintLayout>



