<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="cz.hernik.kaku.FirstFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_KanjiWritingStart"
            app:destination="@id/KanjiWritingStartFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment2"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_HiraganaWritingStart"
            app:destination="@id/HiraganaWritingStart" />
    </fragment>
    <fragment
        android:id="@+id/KanjiWritingStartFragment"
        android:name="cz.hernik.kaku.KanjiWritingStartFragment"
        android:label="@string/label_writing"
        tools:layout="@layout/fragment_kanji_writing_start">
        <action
            android:id="@+id/action_KanjiWritingStart_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_KanjiWritingStart_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_KanjiWritingStart_to_KanjiWriting"
            app:destination="@id/KanjiWritingFragment"/>
        <action
            android:id="@+id/action_KanjiWritingStartFragment_to_HiraganaWritingStart"
            app:destination="@id/HiraganaWritingStart" />
    </fragment>
    <fragment
        android:id="@+id/KanjiWritingFragment"
        android:name="cz.hernik.kaku.KanjiWritingFragment"
        android:label="@string/label_writing"
        tools:layout="@layout/fragment_kanji_writing">

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="cz.hernik.kaku.SecondFragment"
        android:label="@string/list_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_KanjiWritingStart"
            app:destination="@id/KanjiWritingStartFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_HiraganaWritingStart"
            app:destination="@id/HiraganaWritingStart" />
    </fragment>
    <fragment
        android:id="@+id/HiraganaWritingStart"
        android:name="cz.hernik.kaku.HiraganaWritingStart"
        android:label="@string/hiragana_label"
        tools:layout="@layout/fragment_hiragana_writing_start">
        <action
            android:id="@+id/action_HiraganaWritingStart_to_KanjiWritingStartFragment"
            app:destination="@id/KanjiWritingStartFragment" />
        <action
            android:id="@+id/action_HiraganaWritingStart_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_HiraganaWritingStart_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
</navigation>